--- a/Public/Templates/AdminLTE/html/base.html
+++ b/Public/Templates/AdminLTE/html/base.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="__PUBLIC__/plugins/iCheck/all.css">
     <!-- Select2 -->
     <link rel="stylesheet" href="__PUBLIC__/plugins/select2/select2.min.css">
+    <!-- Bootstrap-switch -->
+    <link rel="stylesheet" href="__PUBLIC__/plugins/bootstrap-switch/css/bootstrap-switch.min.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -53,6 +55,8 @@
     <script src="__PUBLIC__/plugins/iCheck/icheck.min.js"></script>
     <!-- Select2 -->
     <script src="__PUBLIC__/plugins/select2/select2.full.min.js"></script>
+    <!-- Bootstrap-switch -->
+    <script src="__PUBLIC__/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
     <!-- Virgil -->
     <script src="__PUBLIC__/plugins/virgil/js/virgil.js"></script>
     <block name="js-files">js-files</block>
