--- a/Public/Templates/AdminLTE/html/main-sidebar.html
+++ b/Public/Templates/AdminLTE/html/main-sidebar.html
@@ -52,6 +52,7 @@
                         <a href="#"><i class="fa fa-circle-o"></i> <span>Data</span> <i class="fa fa-angle-left pull-right"></i></a>
                         <ul class="treeview-menu">
                             <li <eq name="action" value="character">class="active"</eq>><a href="{:U('Admin/Data/character')}"><i class="fa fa-circle-o"></i> Character </a></li>
+                            <li <eq name="action" value="syllabary">class="active"</eq>><a href="{:U('Admin/Data/syllabary')}"><i class="fa fa-circle-o"></i> Syllabary </a></li>
                         </ul>
                     </li>
                 </ul>
