--- a/Public/Templates/ExcelTemplate/excel.html
+++ b/Public/Templates/ExcelTemplate/excel.html
@@ -4,6 +4,7 @@
     <meta http-equiv=Content-Type content="text/html; charset=utf-8">
     <meta name=ProgId content=Excel.Sheet>
     <meta name=Generator content="Microsoft Excel 11">
+    <!--[if gte mso 9]><xml><x:ExcelWorkbook><x:ExcelWorksheets><x:ExcelWorksheet><x:Name></x:Name><x:WorksheetOptions><x:Selected/></x:WorksheetOptions></x:ExcelWorksheet></x:ExcelWorksheets></x:ExcelWorkbook></xml><![endif]-->
 </head>
 
 <body>
